--- a/Demo/exercise.html
+++ b/Demo/exercise.html
@@ -7,7 +7,11 @@
 <P> Hello, Welcome in git command</p>
 <table border="1">
 <tr><th>Title</th></tr>
+<tr><th>Version</th></tr>
+<tr><th>Year</th></tr>
 <tr><td>Git</td></th>
+<tr><td>1.0</td></tr>
+<tr><td>2019</td></tr>
 </table>
 </body>
 </html>
