exercise.html modified 3nd time

--- a/Demo/exercise.html
+++ b/Demo/exercise.html
@@ -12,6 +12,7 @@
 <tr><td>Git</td></th>
 <tr><td>1.0</td></tr>
 <tr><td>2.0</td></tr>
+<tr><td>row by harshal</td></tr>
 <tr><td>2019</td></tr>
 </table>
 <p>Hello sarvesh</p>
